# package-harvester

./: Cargo.toml  README.md  pyproject.toml  run_tests.py  test_results.txt
examples/: harvest_to_nps.py
src/: executor.rs  lib.rs  model.rs  traits.rs
src/harvest/: mod.rs  pipeline.rs  traits.rs
src/harvest/formats/: mod.rs
src/package_harvester/: __init__.py
src/package_harvester/cli/: __init__.py  main.py
src/package_harvester/core/: __init__.py  checkpoint.py  harvester.py  resilience.py
src/package_harvester/exporters/: __init__.py  base.py  json_export.py  nps.py  sqlite.py
src/package_harvester/models/: __init__.py  package.py
src/package_harvester/parsers/: __init__.py  arch.py  flathub.py  nix.py
tests/: test_arch_parser.py  test_cli.py  test_exporters.py  test_nix_parser.py  test_resilience.py
