[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "package-harvester"
version = "1.0.0"
description = "Multi-source Linux package metadata harvester with NPS export"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Nerton", email = "nerton.dev@gmail.com" },
]

dependencies = [
    "httpx>=0.27.0",
    "aiofiles>=23.2.1",
    "PyGithub>=2.1.1",
    "rich>=13.7.0",
    "click>=8.1.7",
]

[project.scripts]
package-harvester = "package_harvester.cli.main:cli"

[tool.hatch.build]
packages = ["src/package_harvester"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check src tests"
format = "ruff format src tests"

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.12"
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "PL", "PT"]
ignore = ["PLR2004"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
